--- a/index.html
+++ b/index.html
@@ -349,15 +349,15 @@
     <div id="carouselExampleCaptions1" class="recipescarousel carousel carousel-dark slide carousel-fade"
       data-bs-ride="false" data-bs-touch="true">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="0" class="active indicators"
+        <button type="button" style="background-color: red;" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="0" class="active indicators"
           aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="1" aria-label="Slide 2"
+        <button type="button" style="background-color: red;" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="1" aria-label="Slide 2"
           class="indicators"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="2" aria-label="Slide 3"
+        <button type="button" style="background-color: red;" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="2" aria-label="Slide 3"
           class="indicators"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="3" aria-label="Slide 4"
+        <button type="button" style="background-color: red;" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="3" aria-label="Slide 4"
           class="indicators"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="4" aria-label="Slide 5"
+        <button type="button" style="background-color: red;" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="4" aria-label="Slide 5"
           class="indicators"></button>
       </div>
       <div class="carousel-inner carouselinner">
