--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
 </head>
 
 <body>
-  <div class="header">
+  <div class="header" id="ott">
     <div class="dnavigation">
       <nav class="desknav navbar sticky-top navbar-expand-lg hidden7" style="background-color: #ffe63f;">
         <div class="container-fluid">
           <a class="navbar-brand" href="https://mohammad-sarfaraz-afzal.github.io/Lays/"><img class="navlogo"
               src="assets/navlogo.png" alt="Lay's logo"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
+          </button> -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+          aria-label="Toggle navigation">
+            <span class="" role="button"><i class="fa fa-bars" aria-hidden="true" style="color:red"></i></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 navgap">
@@ -220,10 +225,10 @@
       <div id="link1" class="card card1 hidden">
         <img src="assets/product1.jpg" class="card-img-top" alt="Lay's">
         <div class="card-body">
-          <h3 class="card-title">Lay's</h3>
-          <p class="card-text">Relish the delectable combination of flavours perfectly blended.</p>
+          <h3 class="card-title hidden1">Lay's</h3>
+          <p class="card-text hidden2">Relish the delectable combination of flavours perfectly blended.</p>
           <a target="_blank" href="https://www.amazon.in/Potato-Lays-Chips/s?rh=n%3A4861763031%2Cp_89%3ALay%27s"
-            class="cbutton mcbutton btn learn btn-warning">View All <svg class="shopicon"
+            class="cbutton mcbutton btn learn btn-warning hidden3">View All <svg class="shopicon"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 576 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
               <path
@@ -234,10 +239,10 @@
       <div id="link2" class="card card2 hidden">
         <img src="assets/product2.jpg" class="card-img-top" alt="Lay's Better">
         <div class="card-body">
-          <h3 class="card-title">Lay's Better</h3>
-          <p class="card-text">Lay's Better is better than any other snack you can think of.</p>
+          <h3 class="card-title hidden1">Lay's Better</h3>
+          <p class="card-text hidden2">Lay's Better is better than any other snack you can think of.</p>
           <a target="_blank" href="https://www.amazon.in/Potato-Lays-Chips/s?rh=n%3A4861763031%2Cp_89%3ALay%27s"
-            class="cbutton mcbutton btn learn btn-warning">View All <svg class="shopicon"
+            class="cbutton mcbutton btn learn btn-warning hidden3">View All <svg class="shopicon"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 576 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
               <path
@@ -248,10 +253,10 @@
       <div id="link3" class="card card3 hidden">
         <img src="assets/product3.jpg" class="card-img-top" alt="Lay's Dips">
         <div class="card-body">
-          <h3 class="card-title">Lay's Dips</h3>
-          <p class="card-text">Lay's dips are perfect match for your snacks.</p>
+          <h3 class="card-title hidden1">Lay's Dips</h3>
+          <p class="card-text hidden2">Lay's dips are perfect match for your snacks.</p>
           <a target="_blank" href="https://www.amazon.in/Potato-Lays-Chips/s?rh=n%3A4861763031%2Cp_89%3ALay%27s"
-            class="cbutton mcbutton btn learn btn-warning">View All <svg class="shopicon"
+            class="cbutton mcbutton btn learn btn-warning hidden3">View All <svg class="shopicon"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 576 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
               <path
@@ -264,10 +269,10 @@
       <div id="link4" class="card card4 hidden">
         <img src="assets/product4.jpg" class="card-img-top" alt="Lay's Kettle">
         <div class="card-body">
-          <h3 class="card-title">Lay's Kettle</h3>
-          <p class="card-text">Lay's Kettle will not dissapoint your feelings.</p>
+          <h3 class="card-title hidden1">Lay's Kettle</h3>
+          <p class="card-text hidden2">Lay's Kettle will not dissapoint your feelings.</p>
           <a target="_blank" href="https://www.amazon.in/Potato-Lays-Chips/s?rh=n%3A4861763031%2Cp_89%3ALay%27s"
-            class="cbutton mcbutton btn learn btn-warning">View All <svg class="shopicon"
+            class="cbutton mcbutton btn learn btn-warning hidden3">View All <svg class="shopicon"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 576 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
               <path
@@ -278,10 +283,10 @@
       <div id="link5" class="card card5 hidden">
         <img src="assets/product5.jpg" class="card-img-top" alt="Lay's Layers">
         <div class="card-body">
-          <h3 class="card-title">Lay's Layers</h3>
-          <p class="card-text">Beautify your taste with beautiful Lay's Layers.</p>
+          <h3 class="card-title hidden1">Lay's Layers</h3>
+          <p class="card-text hidden2">Beautify your taste with beautiful Lay's Layers.</p>
           <a target="_blank" href="https://www.amazon.in/Potato-Lays-Chips/s?rh=n%3A4861763031%2Cp_89%3ALay%27s"
-            class="cbutton mcbutton btn learn btn-warning">View All <svg class="shopicon"
+            class="cbutton mcbutton btn learn btn-warning hidden3">View All <svg class="shopicon"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 576 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
               <path
@@ -292,10 +297,10 @@
       <div id="link6" class="card card6 hidden">
         <img src="assets/product6.jpg" class="card-img-top" alt="Lay's Poppables">
         <div class="card-body">
-          <h3 class="card-title">Lay's Poppable</h3>
-          <p class="card-text">Hungry? Grab a Lay's Poppable anytime anywhere.</p>
+          <h3 class="card-title hidden1">Lay's Poppable</h3>
+          <p class="card-text hidden2">Hungry? Grab a Lay's Poppable anytime anywhere.</p>
           <a target="_blank" href="https://www.amazon.in/Potato-Lays-Chips/s?rh=n%3A4861763031%2Cp_89%3ALay%27s"
-            class="cbutton mcbutton btn learn btn-warning">View All <svg class="shopicon"
+            class="cbutton mcbutton btn learn btn-warning hidden3">View All <svg class="shopicon"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 576 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
               <path
@@ -308,10 +313,10 @@
       <div id="link7" class="card card7 hidden">
         <img src="assets/product7.jpg" class="card-img-top" alt="Lay's Stax">
         <div class="card-body">
-          <h3 class="card-title">Lay's Stax</h3>
-          <p class="card-text">Convenient snack while on the go or relaxing at home.</p>
+          <h3 class="card-title hidden1">Lay's Stax</h3>
+          <p class="card-text hidden2">Convenient snack while on the go or relaxing at home.</p>
           <a target="_blank" href="https://www.amazon.in/Potato-Lays-Chips/s?rh=n%3A4861763031%2Cp_89%3ALay%27s"
-            class="cbutton mcbutton btn learn btn-warning">View All <svg class="shopicon"
+            class="cbutton mcbutton btn learn btn-warning hidden3">View All <svg class="shopicon"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 576 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
               <path
@@ -322,10 +327,10 @@
       <div id="link8" class="card card8 hidden">
         <img src="assets/product8.jpg" class="card-img-top" alt="Lay's Wavy">
         <div class="card-body">
-          <h3 class="card-title">Lay's Wavy</h3>
-          <p class="card-text">Match your wavelengths with Lay's Wavy.</p>
+          <h3 class="card-title hidden1">Lay's Wavy</h3>
+          <p class="card-text hidden2">Match your wavelengths with Lay's Wavy.</p>
           <a target="_blank" href="https://www.amazon.in/Potato-Lays-Chips/s?rh=n%3A4861763031%2Cp_89%3ALay%27s"
-            class="cbutton mcbutton btn learn btn-warning">View All <svg class="shopicon"
+            class="cbutton mcbutton btn learn btn-warning hidden3">View All <svg class="shopicon"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 576 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
               <path
@@ -336,10 +341,10 @@
       <div id="link9" class="card card9 hidden">
         <img src="assets/product9.jpg" class="card-img-top" alt="Lay's Variety Packs">
         <div class="card-body">
-          <h3 class="card-title">Lay's Variety Pack</h3>
-          <p class="card-text">Box w/10 bags of 1OZ. each. Great deal for family.</p>
+          <h3 class="card-title hidden1">Lay's Variety Pack</h3>
+          <p class="card-text hidden2">Box w/10 bags of 1OZ. each. Great deal for family.</p>
           <a target="_blank" href="https://www.amazon.in/Potato-Lays-Chips/s?rh=n%3A4861763031%2Cp_89%3ALay%27s"
-            class="cbutton mcbutton btn learn btn-warning">View All <svg class="shopicon"
+            class="cbutton mcbutton btn learn btn-warning hidden3">View All <svg class="shopicon"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 576 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
               <path
@@ -580,7 +585,7 @@
   <div class="footer hidden7">
     <div class="footerelements">
       <div class="footflex">
-        <a href="https://mohammad-sarfaraz-afzal.github.io/Lays/"><img class="navlogo" src="assets/navlogo.png"
+        <a href="#ott"><img class="navlogo mnavlogo" src="assets/navlogo.png"
             alt="Lay's logo"></a>
         <div class="btn-group dropup">
           <button type="button" class="btn btn-outline-danger cbutton1 dropdown-toggle" data-bs-toggle="dropdown"
@@ -636,7 +641,7 @@
             <path
               d="M0 80v48c0 17.7 14.3 32 32 32H48 96V80c0-26.5-21.5-48-48-48S0 53.5 0 80zM112 32c10 13.4 16 30 16 48V384c0 35.3 28.7 64 64 64s64-28.7 64-64v-5.3c0-32.4 26.3-58.7 58.7-58.7H480V128c0-53-43-96-96-96H112zM464 480c61.9 0 112-50.1 112-112c0-8.8-7.2-16-16-16H314.7c-14.7 0-26.7 11.9-26.7 26.7V384c0 53-43 96-96 96H368h96z" />
           </svg>Accessibility Statement</button>
-        <button type="button" class="btn btn-outline-danger cbutton1"><svg class="videoicon"
+        <button type="button" class="btn btn-outline-danger cbutton1 cookieprf"><svg class="videoicon"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 512 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
             <path
@@ -645,7 +650,7 @@
       </div>
     </div>
     <div style="background-color: #ffe63f;" class="cc">
-      <h6 style="font-size: small;">© 2022 Pious Boys India, All rights reserved.</h6>
+      <h6 class="trademark">© 2022 Pious Boys India, All rights reserved.</h6>
     </div>
   </div>
   <!--Bootstrap JS-->
